--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <resources>
+    <!-- Title for the application. [CHAR LIMIT=12] -->
+    <string name="app_name">YupDevTask3 AudioClass</string>
 
-    <string name="app_name">YupdevAudio</string>
-    <string name="hello_world">Hello world!</string>
-
+    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
+    <string name="category_family">Family Members</string>
 </resources>
